--- a/lib/adoptoposs_web/templates/settings/index.html.heex
+++ b/lib/adoptoposs_web/templates/settings/index.html.heex
@@ -25,7 +25,7 @@
             <%= for tag_subscription <- @tag_subscriptions do %>
               <% tag = tag_subscription.tag %>
               <div id={"tag-#{tag.id}"} class="flex flex-row items-center bg-white text-pink-900 border border-gray-400 font-semibold mr-2 mb-2 rounded hover:bg-red-500 hover:text-white hover:border-white">
-                <div class="w-3 h-3 rounded rounded-full ml-3" style="background-color: #{tag.color};"></div>
+                <div class="w-3 h-3 rounded rounded-full ml-3" style={"background-color: #{tag.color};"}></div>
                 <div class="pl-2" title={tag.name}>
                   <span class=""><%= tag.name %></span>
 
