--- a/lib/adoptoposs_web/templates/layout/error.html.heex
+++ b/lib/adoptoposs_web/templates/layout/error.html.heex
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <%= render AdoptopossWeb.SharedView, "meta_tags.html", assigns %>
 
-    <link rel="stylesheet" href={Routes.static_path(@conn, "/css/app.css")}/>
+    <link rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <%= render AdoptopossWeb.SharedView, "google_analytics.html" %>
 
     <%= csrf_meta_tag() %>
-    <script defer type="text/javascript" src={Routes.static_path(@conn, "/js/app.js")}></script>
+    <script defer type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
 
   <body>
