Update 3rd party processors in privacy policy
- replace Heroku with Fly.io
- drop NewRelic
- fix main branch in Code of Conduct URL

--- a/lib/adoptoposs_web/templates/page/privacy.html.heex
+++ b/lib/adoptoposs_web/templates/page/privacy.html.heex
@@ -2,7 +2,7 @@
   <h1>Adoptoposs Privacy Policy</h1>
 
   <p class="italic text-gray-600 text-base">
-    Last updated: March 29, 2020
+    Last updated: March 13, 2022
   </p>
 
   <p>
@@ -20,7 +20,7 @@
   </p>
 
   <p>
-    The only times we’ll ever share your info is to investigate, prevent, or take action regarding illegal activities, suspected fraud, situations involving potential threats to the physical safety of any person, violations of our <%= link "Code of Conduct", to: "https://github.com/adoptoposs/adoptoposs/blob/master/CODE_OF_CONDUCT.md" %>, or as otherwise required by law.
+    The only times we’ll ever share your info is to investigate, prevent, or take action regarding illegal activities, suspected fraud, situations involving potential threats to the physical safety of any person, violations of our <%= link "Code of Conduct", to: "https://github.com/adoptoposs/adoptoposs/blob/main/CODE_OF_CONDUCT.md" %>, or as otherwise required by law.
   </p>
 
   <h2 class="mb-2">Your Rights With Respect to Your Information</h2>
@@ -75,13 +75,10 @@
 
     <ul class="list-disc list-inner ml-6">
       <li>
-        <%= link "Heroku", to: "https://devcenter.heroku.com/articles/gdpr" %>. Cloud service provider.
+        <%= link "Fly.io", to: "https://fly.io/legal/privacy-policy/" %>. Cloud service provider.
       </li>
       <li>
         <%= link "Mailgun", to: "https://www.mailgun.com/gdpr/" %>. Text messaging service.
-      </li>
-      <li>
-        <%= link "New Relic", to: "https://newrelic.com/termsandconditions/privacy" %>. Performance monitoring service.
       </li>
       <li>
         <%= link "Google Analytics", to: "https://support.google.com/analytics/answer/6004245?hl=en" %>. Web analytics service.
