Readd line breaks in email and adjust complementary close

--- a/lib/adoptoposs_web/templates/layout/email.html.heex
+++ b/lib/adoptoposs_web/templates/layout/email.html.heex
@@ -68,11 +68,12 @@
       <mj-column>
         <mj-text css-class="text">
           Thanks for helping open source software. ♡
+          <br />
           Always keep maintaining!
         </mj-text>
 
         <mj-text css-class="text">
-          - Your Adoptoposs
+          - The Adoptoposs Team
         </mj-text>
 
         <mj-image width="101px" src={Routes.static_url(AdoptopossWeb.Endpoint, "/images/adoptoposs-logo.png")} />
