--- a/lib/adoptoposs_web/templates/layout/email.text.eex
+++ b/lib/adoptoposs_web/templates/layout/email.text.eex
@@ -1,7 +1,8 @@
 <%= @inner_content %>
 
 Always keep maintaining!
-- Your Adoptoposs
+
+- The Adoptoposs Team
 
 
 Visit <%= Routes.live_url(AdoptopossWeb.Endpoint, AdoptopossWeb.LandingPageLive) %> to find co-maintainers for your open source software project.
