--- a/lib/adoptoposs_web/templates/layout/error.html.heex
+++ b/lib/adoptoposs_web/templates/layout/error.html.heex
@@ -18,7 +18,7 @@
 
     <header>
       <nav role="navigation">
-        <div class="flex items-center flex-shrink-0 mr-6">
+        <div class="flex items-center shrink-0 mr-6">
           <a href="/" class="font-semibold text-xl tracking-tight">
             <img src={Routes.static_path(@conn, "/images/adoptoposs-logo.png")} alt="Adoptoposs" class="h-10"/>
           </a>
