--- a/lib/adoptoposs_web/templates/repo/repo.html.heex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.heex
@@ -10,7 +10,7 @@
           Submitted to
           <%= live_redirect "Your Projects",
             to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ProjectLive),
-            class: "text-gray-600 hover:text-gray-700 hover:underline" %>
+            class: "text-gray-600 hover:text-gray-700 underline" %>
         </span>
         <span class="flex items-center justify-center h-12 w-12 md:h-16 md:w-16 my-4 md:mb-2 md:mt-0 rounded rounded-full border text-center text-green-700 bg-green-200">
           <svg xmlns='http://www.w3.org/2000/svg' class='h-5 w-5 md:h-6 md:w-6 fill-current' viewBox='0 0 512 512'>
