--- a/lib/adoptoposs_web/templates/project/index.html.heex
+++ b/lib/adoptoposs_web/templates/project/index.html.heex
@@ -107,7 +107,10 @@
                         </span>
                       </div>
                     <% else %>
-                      <%= live_redirect to: Routes.live_path(@socket, AdoptopossWeb.MessagesLive.Interests) <> "/#p-#{project.uuid}", class: "flex flex-row items-center emphasize", title: "#{Enum.count(project.interests)} people contacted you" do %>
+                      <.link
+                        navigate={Routes.live_path(@socket, AdoptopossWeb.MessagesLive.Interests) <> "/#p-#{project.uuid}"}
+                        class="flex flex-row items-center emphasize"
+                        title={"#{Enum.count(project.interests)} people contacted you"}>
                         <span>
                           <svg xmlns="http://www.w3.org/2000/svg" class="inline w-6 h-6 fill-current" viewBox="0 0 512 512">
                             <path d="M424 80H88a56.06 56.06 0 00-56 56v240a56.06 56.06 0 0056 56h336a56.06 56.06 0 0056-56V136a56.06 56.06 0 00-56-56zm-14.18 92.63l-144 112a16 16 0 01-19.64 0l-144-112a16 16 0 1119.64-25.26L256 251.73l134.18-104.36a16 16 0 0119.64 25.26z"/>
@@ -117,7 +120,7 @@
                         <span class="ml-2 text-md font-medium">
                           <%= Enum.count(project.interests) %>
                         </span>
-                      <% end %>
+                      </.link>
                     <% end %>
                   </div>
 
