--- a/lib/adoptoposs_web/templates/repo/repo.html.heex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.heex
@@ -8,9 +8,11 @@
       <%= if @submitted do %>
         <span class="text-gray-600 mr-4 md:mb-2">
           Submitted to
-          <%= live_redirect "Your Projects",
-            to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ProjectLive),
-            class: "text-gray-600 hover:text-gray-700 underline" %>
+          <.link
+            navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ProjectLive)}
+            class="text-gray-600 hover:text-gray-700 underline">
+            Your Projects
+          </.link>
         </span>
         <span class="flex items-center justify-center h-12 w-12 md:h-16 md:w-16 my-4 md:mb-2 md:mt-0 rounded rounded-full border text-center text-green-700 bg-green-200">
           <svg xmlns='http://www.w3.org/2000/svg' class='h-5 w-5 md:h-6 md:w-6 fill-current' viewBox='0 0 512 512'>
