--- a/lib/adoptoposs_web/templates/settings/index.html.heex
+++ b/lib/adoptoposs_web/templates/settings/index.html.heex
@@ -16,7 +16,7 @@
             <path d="M248 130a26 26 0 1026 26 26 26 0 00-26-26z"/>
           </svg>
           Programming languages you add here will appear as quick filters on the
-          <%= live_redirect "explore projects page", to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive) %>.
+          <.link navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive)}>explore projects page</.link>.
           You can also receive email notifications for new projects in these languages.
         </p>
 
