--- a/lib/adoptoposs_web/templates/landing_page/index.html.heex
+++ b/lib/adoptoposs_web/templates/landing_page/index.html.heex
@@ -12,9 +12,11 @@
     <div class="flex flex-row items-center px-4 mt-16 md:px-0 md:mt-20">
       <hr class="flex-grow border-gray-100">
       <div class="self-center">
-        <%= live_redirect "Explore Projects",
-          to: Routes.live_path(@socket, AdoptopossWeb.ExploreLive),
-          class: "button-link light mx-3" %>
+        <.link
+          navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive)}
+          class="button-link light mx-3">
+          Explore Projects
+        </.link>
       </div>
       <hr class="flex-grow border-gray-100">
     </div>
@@ -24,9 +26,8 @@
 <div class="bg-gray-900 px-4 md:px-0 pb-8 pt-6">
   <section>
     <p class="text-lg md:text-xl md:w-1/2 m-auto self-center text-center text-red-400">
-      <%= link "Read more",
-        to: "https://medium.com/p/74c1cd5df5d5?source=friends_link&sk=80b575161642c3ba17d6d4213de8578a",
-        class: "text-red-400 underline hover:text-red-300" %> about the benefits of working in a team of co-maintainers on your OSS project!
+      <.link href="https://medium.com/p/74c1cd5df5d5?source=friends_link&sk=80b575161642c3ba17d6d4213de8578a"
+        class="text-red-400 underline hover:text-red-300">Read more</.link> about the benefits of working in a team of co-maintainers on your OSS project!
     </p>
   </section>
 </div>
@@ -77,9 +78,11 @@
     <div class="flex flex-row items-center px-4 mb-4 mt-12 md:px-0 md:mb-0 md:mt-20">
       <hr class="flex-grow border-gray-600">
       <div class="self-center">
-        <%= live_redirect "Explore Projects",
-          to: Routes.live_path(@socket, AdoptopossWeb.ExploreLive),
-          class: "button-link dark mx-3 gray-600" %>
+        <.link
+          navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive)}
+          class="button-link dark mx-3 gray-600">
+          Explore Projects
+        </.link>
       </div>
       <hr class="flex-grow border-gray-600">
     </div>
@@ -93,12 +96,15 @@
     </h1>
 
     <div class="pb-2 md:pb-4 text-md md:text-lg text-center">
-      <%= link "Please log in to contact project maintainers.", to: "#top", class: "text-red-400" %>
+      <.link href="#top" class="text-red-400">
+        Please log in to contact project maintainers.
+      </.link>
     </div>
 
     <div id="projects" class="mt-6 md:mt-10 grid grid-flow-row gap-4">
       <%= for project <- @projects do %>
-        <.live_component module={AdoptopossWeb.ProjectComponent}
+        <.live_component
+          module={AdoptopossWeb.ProjectComponent}
           id={"project-#{project.id}"}
           project={project}
           user_id={nil} />
@@ -106,9 +112,11 @@
     </div>
 
     <div class="mt-12 text-center self-center">
-      <%= live_redirect "Explore More…",
-        to: Routes.live_path(@socket, AdoptopossWeb.ExploreLive),
-        class: "button-link medium mx-3" %>
+      <.link
+        navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive)}
+        class="button-link medium mx-3">
+        Explore More…
+      </.link>
     </div>
   </section>
 </div>
@@ -161,9 +169,11 @@
     <div class="flex flex-row items-center mt-12">
       <hr class="flex-grow border-red-300">
       <div class="self-center">
-        <%= live_redirect "Log in with GitHub",
-          to: Routes.auth_path(@socket, :request, "github"),
-          class: "button-link mx-3" %>
+        <.link
+          navigate={Routes.auth_path(@socket, :request, "github")}
+          class="button-link mx-3">
+          Log in with GitHub
+        </.link>
       </div>
       <hr class="flex-grow border-red-300">
     </div>
