--- a/lib/adoptoposs_web/templates/messages/contacted.html.heex
+++ b/lib/adoptoposs_web/templates/messages/contacted.html.heex
@@ -4,9 +4,11 @@
   <h2>Contacted Maintainers</h2>
 
   <div class="flex md:hidden flex-col pb-4 bg-gray-100 sticky top-0">
-    <%= live_redirect "Interests in your Projects",
-        to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.MessagesLive.Interests),
-        class: "flex items-center w-full font-semibold cursor-default pl-8 pt-3 pb-2 rounded cursor-pointer focus:bg-gray-300 text-gray-700 hover:text-gray-800 focus:text-gray-800" %>
+    <.link
+      navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.MessagesLive.Interests)}
+      class="flex items-center w-full font-semibold cursor-default pl-8 pt-3 pb-2 rounded cursor-pointer focus:bg-gray-300 text-gray-700 hover:text-gray-800 focus:text-gray-800">
+      Interests in your Projects
+    </.link>
 
     <div class="flex items-center w-full font-semibold cursor-default pl-1 pt-1 pb-2 rounded bg-gray-100 text-red-600">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="inline fill-current h-5">
@@ -26,9 +28,10 @@
           <p class="text-lg md:text-2xl text-gray-600 text-center mb-4 md:mb-8">
             You did not contact any maintainer yet.
           </p>
-          <%= live_redirect "Explore Projects",
-            to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive),
-            class: "button-link mb-4" %>
+          <.link navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.ExploreLive)}
+            class="button-link mb-4">
+            Explore Projects
+          </.link>
           <p>
             Messages you sent will appear here.
           </p>
@@ -74,9 +77,11 @@
     </div>
 
     <div class="hidden md:flex md:flex-col w-1/4 ml-8 border rounded border-gray-400">
-      <%= live_redirect "Interests in your Projects",
-        to: Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.MessagesLive.Interests),
-        class: "flex items-center w-full pl-10 font-semibold cursor-default p-3 rounded cursor-pointer bg-white hover:bg-gray-200 focus:bg-gray-300 text-gray-700 hover:text-gray-800 focus:text-gray-800" %>
+      <.link
+        navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.MessagesLive.Interests)}
+        class="flex items-center w-full pl-10 font-semibold cursor-default p-3 rounded cursor-pointer bg-white hover:bg-gray-200 focus:bg-gray-300 text-gray-700 hover:text-gray-800 focus:text-gray-800">
+        Interests in your Projects
+      </.link>
 
       <div class="flex items-center w-full font-semibold cursor-default px-4 p-3 rounded bg-white text-red-600">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="inline fill-current h-5">
