--- a/lib/adoptoposs_web/templates/page/faq.html.heex
+++ b/lib/adoptoposs_web/templates/page/faq.html.heex
@@ -40,14 +40,14 @@
         Please consider looking for a co-maintainer if you are the <i>only maintainer</i> for your project right now.
         <br>
         You can read about the benefits of having co-maintainers
-        <%= link "here", to: "https://medium.com/p/74c1cd5df5d5?source=friends_link&sk=80b575161642c3ba17d6d4213de8578a" %>.
+        <.link href="https://medium.com/p/74c1cd5df5d5?source=friends_link&sk=80b575161642c3ba17d6d4213de8578a">here</.link>.
       </p>
     <% end %>
 
     <%= faq "How can I submit my repo?"  do %>
       <ul class="list-disc list-inner pl-4">
         <li>
-          You can submit a repo on your <%= live_redirect "repo page", to: Routes.repo_path(@conn, :index) %>.
+          You can submit a repo on your <.link navigate={Routes.repo_path(@conn, :index)}>repo page</.link>.
         </li>
         <li>
           Select the GitHub organization of your repo at the top of the page.
@@ -62,8 +62,8 @@
     <% end %>
 
     <%= faq "Where can I see my submitted repos?" do %>
-      Your submitted repositories are listed on your <%= live_redirect "projects page", to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive) %> and visible for everyone on the
-      <%= live_redirect "public explore page", to: Routes.live_path(@conn, AdoptopossWeb.ExploreLive) %>.
+      Your submitted repositories are listed on your <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ProjectLive)}>projects page</.link> and visible for everyone on the
+      <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)}>public explore page</.link>.
     <% end %>
 
     <%= faq "Can I submit repos from other services than GitHub?" do %>
@@ -76,10 +76,10 @@
     <%= faq "How can I become a maintainer for a project on Adoptoposs?" do %>
       <p>
         Projects that are looking for maintainers are visible on the
-        <%= live_redirect "explore page", to: Routes.live_path(@conn, AdoptopossWeb.ExploreLive) %>
+        <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)}>explore page</.link>
         or your personal
         <%= if @current_user do %>
-          <%= live_redirect "dashboard", to: Routes.live_path(@conn, AdoptopossWeb.LandingPageLive) %>
+          <.link navigate={Routes.live_path(@conn, AdoptopossWeb.LandingPageLive)}>dashboard</.link>
         <% else %>
           landing page
         <% end %>.
@@ -99,21 +99,21 @@
     <%= faq "How can I find interesting projects?" do %>
       <p>
         You will find projects on our
-        <%= live_redirect "explore page", to: Routes.live_path(@conn, AdoptopossWeb.ExploreLive) %>.
+        <.link navigate={Routes.live_path(@conn, AdoptopossWeb.ExploreLive)}>explore page</.link>.
         You can search for project names, organizations, and parts of the maintainer’s description. You can filter all projects by selecting the languages you are interested in.
       </p>
 
       <p>
         If you added favorite programming languages you will see project recommendations on your personal
         <%= if @current_user do %>
-          <%= live_redirect "dashboard", to: Routes.live_path(@conn, AdoptopossWeb.LandingPageLive) %>
+          <.link navigate={Routes.live_path(@conn, AdoptopossWeb.LandingPageLive)}>dashboard</.link>
         <% else %>
           landing page
         <% end %>.
       </p>
       <p>
         You can also
-        <%= live_redirect "subscribe", to: Routes.live_path(@conn, AdoptopossWeb.SettingsLive) %>
+        <.link navigate={Routes.live_path(@conn, AdoptopossWeb.SettingsLive)}>subscribe</.link>
         to email notifications to receive project recommendations for your favourite languages.
       </p>
     <% end %>
@@ -137,7 +137,7 @@
     <%= faq "How can I subscribe to / unsubscribe from email notifications?" do %>
       <p>
         You can edit your email notification settings on your
-        <%= link "settings page", to: Routes.live_path(@conn, AdoptopossWeb.SettingsLive) %>.
+        <.link navigate={Routes.live_path(@conn, AdoptopossWeb.SettingsLive)}>settings page</.link>.
       </p>
     <% end %>
   </div>
