--- a/lib/adoptoposs_web/templates/shared/footer.html.heex
+++ b/lib/adoptoposs_web/templates/shared/footer.html.heex
@@ -8,13 +8,13 @@
     </ul>
 
     <div>
-      <a href="https://github.com/adoptoposs/adoptoposs">Fork us on GitHub</a>
+      <a href="https://github.com/adoptoposs/adoptoposs" title="GitHub Repo">Find us on GitHub</a>
     </div>
   </div>
 
   <div class="text-center text-red-400 mt-4 mb-0">
     Made with ♡ |
-    <%= link "Phoenix LiveView", to: "https://github.com/phoenixframework/phoenix_live_view" %> |
-    <%= link "Tailwind CSS", to: "https://tailwindcss.com" %>
+    <.link href="https://github.com/phoenixframework/phoenix_live_view" title="Phoenix LiveView">Phoenix LiveView</.link> |
+    <.link href="https://tailwindcss.com" title="TailwindCSS">Tailwind CSS</.link>
   </div>
 </section>
