--- a/lib/adoptoposs_web/templates/sharing/project.html.heex
+++ b/lib/adoptoposs_web/templates/sharing/project.html.heex
@@ -25,17 +25,20 @@
     <% end %>
 
     <div class="mt-6 text-center text-lg">
-      <%= live_redirect "Explore more projects",
-        to: Routes.live_path(@socket, AdoptopossWeb.ExploreLive)%>
+      <.link navigate={Routes.live_path(@socket, AdoptopossWeb.ExploreLive)}>
+        Explore more projects
+      </.link>
     </div>
 
     <%= unless @user_id do %>
       <div class="flex flex-row items-center my-6 md:my-8 mt-12 md:mt-16">
         <hr class="flex-grow border-red-300">
         <div class="self-center">
-          <%= live_redirect "Log in with GitHub",
-            to: Routes.auth_path(@socket, :request, "github"),
-            class: "button-link mx-3" %>
+          <.link
+            navigate={Routes.auth_path(@socket, :request, "github")}
+            class="button-link mx-3">
+            Log in with GitHub
+          </.link>
         </div>
         <hr class="flex-grow border-red-300">
       </div>
