Fix navigate typo for filter links

--- a/lib/adoptoposs_web/templates/explore/filters.html.heex
+++ b/lib/adoptoposs_web/templates/explore/filters.html.heex
@@ -98,7 +98,7 @@
         Your favorite languages
         <%= if @user_id do %>
           <span class="float-right">
-            <.link naviagte={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SettingsLive)}>
+            <.link navigate={Routes.live_path(AdoptopossWeb.Endpoint, AdoptopossWeb.SettingsLive)}>
               Edit
             </.link>
           </span>
