Update phoenix to v1.6.15 & related dependencies
...and fix warnings and reply template

--- a/lib/adoptoposs_web/templates/email/interest_received.text.eex
+++ b/lib/adoptoposs_web/templates/email/interest_received.text.eex
@@ -2,7 +2,7 @@ Hi <%= @interest.project.user.name %>,
 
 you’ve got a new message for your project "<%= @interest.project.name %>"  on Adoptoposs:
 
-<%= render AdoptopossWeb.InterestView, "reply", interest: @interest %>
+<%= render AdoptopossWeb.InterestView, "reply.text", interest: @interest %>
 
 You can find the original message here: <%= @message_url %>.
 
