Add Honeybadger to list of third party processors

--- a/lib/adoptoposs_web/templates/page/privacy.html.heex
+++ b/lib/adoptoposs_web/templates/page/privacy.html.heex
@@ -2,7 +2,7 @@
   <h1>Adoptoposs Privacy Policy</h1>
 
   <p class="italic text-gray-600 text-base">
-    Last updated: March 13, 2022
+    Last updated: November 06, 2022
   </p>
 
   <p>
@@ -76,6 +76,9 @@
     <ul class="list-disc list-inner ml-6">
       <li>
         <%= link "Fly.io", to: "https://fly.io/legal/privacy-policy/" %>. Cloud service provider.
+      </li>
+      <li>
+        <%= link "Honeybadger", to: "https://www.honeybadger.io/privacy/" %>. Application health monitoring service.
       </li>
       <li>
         <%= link "Mailgun", to: "https://www.mailgun.com/gdpr/" %>. Text messaging service.
