--- a/lib/adoptoposs_web/templates/settings/settings_radio_panel.html.heex
+++ b/lib/adoptoposs_web/templates/settings/settings_radio_panel.html.heex
@@ -2,7 +2,7 @@
   <h3 class="text-gray-800"><%= @title %></h3>
   <p><%= @description %></p>
 
-  <.form let={f} for={@settings} action="#" phx_change="update_settings">
+  <.form :let={f} for={@settings} action="#" phx_change="update_settings">
     <%= inputs_for f, :settings, fn fs -> %>
       <%= for value <- apply(Adoptoposs.Accounts.Settings, :"#{@key}_values", []) do %>
         <div class={"flex items-center rounded pl-4 mb-1 #{if active?(@settings, @key, value), do: "bg-gray-200"}"}>
