Fix deprecation warning for get_flash

--- a/lib/adoptoposs_web/templates/explore/searchable_filters.html.heex
+++ b/lib/adoptoposs_web/templates/explore/searchable_filters.html.heex
@@ -28,7 +28,7 @@
       phx-target={"##{@phx_target}"}>
       <input type="text"
         class="search flex-grow border h-12 pl-6 pr-10"
-        id="tag_search"
+        id={"#{@id}-tag_search"}
         name="q"
         value={@query}
         autocomplete="off"
