--- a/lib/adoptoposs_web/templates/layout/app.html.heex
+++ b/lib/adoptoposs_web/templates/layout/app.html.heex
@@ -1,6 +1,8 @@
 <section>
-  <%= if get_flash(@conn, :error) do %>
-    <p class="text-red-500 text-center font-font-semibold p-4 rounded border border-red-400" role="alert"><%= get_flash(@conn, :error) %></p>
+  <%= if Phoenix.Flash.get(@flash, :error) do %>
+    <p class="text-red-500 text-center font-font-semibold p-4 rounded border border-red-400" role="alert">
+      <%= Phoenix.Flash.get(@flash, :error) %>
+    </p>
   <% end %>
 </section>
 
